# Glory3d

./: CMakeLists.txt  LICENSE
src/: CpuVisualizer.cpp  CpuVisualizer.h  main.cpp
src/output/: ConsoleFrameOutput.cpp  ConsoleFrameOutput.h  FrameOutput.cpp  FrameOutput.h
src/spatial3d/: Scene3d.cpp  Scene3d.h  utils3d.cpp  utils3d.h
src/spatial3d/primitives/: Camera3d.cpp  Camera3d.h  Cube3d.cpp  Cube3d.h  Direction3d.cpp  Direction3d.h  Light3d.cpp  Light3d.h  Object3d.cpp  Object3d.h  Point3d.cpp  Point3d.h  Polygon3d.cpp  Polygon3d.h  Renderable3d.cpp  Renderable3d.h  Rotation3d.cpp  Rotation3d.h  Scale3d.cpp  Scale3d.h  Scene3d.cpp  Scene3d.h  Vector3d.cpp  Vector3d.h
src/utils/: matrixUtils.cpp  matrixUtils.h  timeUtils.cpp  timeUtils.h
